--- a/styles/sass/_home-page.scss
+++ b/styles/sass/_home-page.scss
@@ -35,6 +35,9 @@ nav {
   margin: 20px;
 }
 
+.active-navlink {
+  color: $secondary-text-color;
+}
 .main-menu {
 	display: flex;
   justify-content: center;
